terraform-codes/data-source.tf
data "aws_ami" "app_ami"{
  most_recent  =  "true"
  owners       =  ["amazon"]

  filter {
    name = "name"
    values   =  ["amzn2-ami-hvm*"]

  }
}

resource "aws_instance" "new-ec2" {
    ami  =  data.aws_ami.app_ami.id
    instance_type = "t2.micro"

}
